src/objects/Cons_Revenue_Center__c.object
<CustomObject>
    <fields>
        <fullName>c_comp_grp__c</fullName>
        <label>Comp group</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_comp_type__c</fullName>
        <label>Comp type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_cons_rev_center_cd__c</fullName>
        <label>Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_cons_rev_center_desc__c</fullName>
        <label>Cons revenue center description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_current_flag__c</fullName>
        <label>Current flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_outlet_cd__c</fullName>
        <label>Outlet code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pos_rev_center_cd__c</fullName>
        <label>Pos revenue center code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cons Revenue Centers</relationshipLabel>
        <relationshipName>Cons_Revenue_Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <label>Quality code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rev_center_cd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMS Revenue Center</label>
        <referenceTo>LMS_Revenue_Center__c</referenceTo>
        <relationshipLabel>Cons Revenue Centers</relationshipLabel>
        <relationshipName>Cons_Revenue_Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>d_effective_end_dt__c</fullName>
        <label>Effective end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>d_effective_start_dt__c</fullName>
        <label>Effective start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>f_profit_factor_actual__c</fullName>
        <label>Profit factor actual</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_profit_factor_avg__c</fullName>
        <label>Profit factor average</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_revenue_category_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Category</label>
        <referenceTo>Revenue_Category__c</referenceTo>
        <relationshipLabel>Cons Revenue Centers</relationshipLabel>
        <relationshipName>Cons_Revenue_Centers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cons Revenue Center</label>
    <nameField>
        <displayFormat>CRC-{00000}</displayFormat>
        <label>Cons Revenue Center Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cons Revenue Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>